<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/main_menu"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_menu_24"
        android:fillColor="#000000"
        >

        <menu>

            <item
                android:id="@+id/settings"
                android:fillColor="#000000"
                app:iconTint="@android:color/black"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings"
                app:showAsAction="never"
                />

            <item
                android:title="@string/wi_fi"
                android:fillColor="#000000"
                app:iconTint="@android:color/black"
                android:icon="@drawable/ic_baseline_wifi_24"
                android:id="@+id/wifi"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
